--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="hero">
         <div class="hero-content flex-col lg:flex-row">
           <div>
-            <h1 class="text-7xl font-extrabold">
+            <h1 class="text-3xl lg:text-7xl font-extrabold">
                 It's good <br>
                tea time at The <br>
                 Tea House</h1>
@@ -60,7 +60,7 @@
    </header> 
    <main class="container mx-auto py-24">
    <section class="text-center">
-   <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+   <h2 class="text-2xl lg:text-5xl font-extrabold mb-5">Our Featured Products</h2>
    <p class="lg:max-w-3xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
    <!--Featured card-->
    <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-10">
@@ -113,7 +113,7 @@
             <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF]"></div>
     </div>
     <div class="space-y-5 flex-1">
-        <h3 class="text-5xl font-extrabold">
+        <h3 class="text-3xl lg:text-5xl font-extrabold">
             Great Tea, Freshly <br>
              Presented
         </h3>
@@ -131,7 +131,7 @@
 
    </section>
    <!-- Super Client Section -->
-   <section class="my-24 flex flex-col gap-12 lg:flex-row rounded-xl  bg-gradient-to-r from-[#FF8938] to-[#F00]  lg:px-16 py-24">
+   <section class="my-24 flex flex-col gap-12 lg:flex-row rounded-xl  bg-gradient-to-r from-[#FF8938] to-[#F00] px-4  lg:px-16 py-24">
     <div class="flex items-center lg:pr-28 ">
         <div class="space-y-4">
           <h2 class="text-2xl lg:text-5xl font-extrabold text-white">
@@ -145,7 +145,7 @@
     <!--review container-->
    <div class="relative">
      <!--next review -->
-    <div class=" relative z-10 mb-16 lg:w-[350px] opacity-40 p-10 rounded-lg bg-white">
+    <div class=" relative z-10 mb-16 lg:w-[350px] opacity-40 p-5 lg:p-10 rounded-lg bg-white">
         <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white " src="images/client.png" alt="">
      <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
      <h4 class="font-bold mt-5">Ilham Yuda</h4>
@@ -175,7 +175,47 @@
      </div>
     </div>
    </div>
+   </section>
+   <!-- news & event section -->
+   <section>
+    <div class="text-center">
+      <h2 class="text-2xl lg:text-5xl font-extrabold mb-5">News & Events</h2>
+      <p class="text-[#777] mb-10 lg:w-[780px] lg:mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+    </div>
+    <!-- Card section -->
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
+      <!-- first caed -->
+      <div class="mr-2 lg:card bg-base-100 shadow-xl">
+        <figure><img class="p-5" src="images/news-1.png" alt="" /></figure>
+        <div class="card-body">
+          <p class="text-[#777]">Feb 05, 2027</p>
+          <h2 class="text-xl font-extrabold text-[#1C1C1C]">Collecting 8 points for <br> discount</h2>
+          <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+          <a class="lg:font-[700px] text-[#1C1C1C]" href="">Learn More</a>
+        </div>
+      </div>
+       <!-- second caed -->
+       <div class="card bg-base-100 shadow-xl">
+        <figure><img class="p-5" src="images/news-2.png" alt="" /></figure>
+        <div class="card-body">
+          <p class="text-[#777]">Feb 05, 2027</p>
+          <h2 class="text-xl font-extrabold text-[#1C1C1C]">Collecting 8 points for <br> discount</h2>
+          <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+          <a class="lg:font-[700px] text-[#1C1C1C]" href="">Learn More</a>
+        </div>
+      </div>
+      <!-- third caed -->
+      <div class="card bg-base-100 shadow-xl">
+        <figure><img class="p-5" src="images/news-3.png" alt="" /></figure>
+        <div class="card-body">
+          <p class="text-[#777]">Feb 05, 2027</p>
+          <h2 class="text-xl font-extrabold text-[#1C1C1C]">Collecting 8 points for <br> discount</h2>
+          <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+          <a class="lg:font-[700px] text-[#1C1C1C]" href="">Learn More</a>
+        </div>
+      </div>
 
+    </div>
    </section>
 
    </main>
